--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -19,20 +19,66 @@
 
     <!-- font-awesome -->
     <script src="https://kit.fontawesome.com/6f51361b4e.js" crossorigin="anonymous"></script>
-    
+
     <!-- custom css -->
     <style>
-        #font-lato{
+        #font-lato {
             font-family: 'Lato', sans-serif;
         }
     </style>
 </head>
 
-<body id="font--lato">
+<body id="font-lato">
 
     <!-- header -->
-    <header>
+    <header class="max-w-[1440px] mx-auto">
 
+        <!-- navbar -->
+        <nav class="my-12">
+            <div class="navbar bg-[#F85559] p-0 lg:px-12 py-8 rounded-none lg:rounded-full">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <label tabindex="0" class="btn btn-ghost xl:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </label>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-black text-lg font-medium">
+                            <li><a>Home</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
+                        </ul>
+                        <ul class="menu menu-horizontal hidden xl:flex px-1 text-white text-sm xl:text-lg font-medium">
+                            <li><a>Home</a></li>
+                            <li><a>About Us</a></li>
+                            <li><a>Shop</a></li>
+                            <li><a>All Fruits</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="navbar-center flex  ml-[6.313rem] md:ml-[28.75rem] lg:ml-0 ">
+                    <img class="w-7 lg:w-auto" src="images/logo.png" alt="logo">
+                    <a class="btn btn-ghost normal-case text-xl md:text-4xl font-bold text-white">Fruit Valley</a>
+                </div>
+                <div class="navbar-end">
+                    <div class="form-control hidden lg:flex">
+                        <div class="relative">
+                            <!-- Search Input -->
+                            <input type="text" placeholder="Search Here"
+                                class="w-full bg-white focus:outline-none focus:shadow-outline border border-gray-300 px-7 py-5 pr-56 rounded-full">
+                            <!-- Search Icon -->
+                            <div class="absolute top-0 right-0 mt-2 mr-3 text-gray-600">
+                                <i class="fa-solid fa-magnifying-glass px-7 py-5"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- main -->
@@ -44,7 +90,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
 
 </html>
