--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <header class="max-w-[1440px] mx-auto">
 
         <!-- navbar -->
-        <nav class="my-12">
-            <div class="navbar bg-[#F85559] p-0 lg:px-12 py-8 rounded-none lg:rounded-full">
+        <nav class="mb-5 md:mb-12">
+            <div class="navbar bg-white text-black md:text-white md:bg-[#F85559] p-0 lg:px-12 py-8 rounded-none lg:rounded-full">
                 <div class="navbar-start">
                     <div class="dropdown">
                         <label tabindex="0" class="btn btn-ghost xl:hidden">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="navbar-center flex  ml-[6.313rem] md:ml-[28.75rem] lg:ml-0 ">
                     <img class="w-7 lg:w-auto" src="images/logo.png" alt="logo">
-                    <a class="btn btn-ghost normal-case text-xl md:text-4xl font-bold text-white">Fruit Valley</a>
+                    <a class="btn btn-ghost normal-case text-xl md:text-4xl font-bold text-black md:text-white">Fruit Valley</a>
                 </div>
                 <div class="navbar-end">
                     <div class="form-control hidden lg:flex">
@@ -81,33 +81,72 @@
         </nav>
 
         <!-- banner-section -->
-        <section>
-            <!-- slider -->
-            <div class="carousel w-full" style="background-image: url('images/banner1.png'), linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);
-            background-blend-mode: overlay;">
-                <!-- slider-1 -->
+        <section class="p-4 lg:p-0">
+
+            <div class="carousel w-full min-h-[calc(100vh-226px)]">
+                <!-- slide-1 -->
                 <div id="slide1" class="carousel-item relative w-full">
+                    <div class="hero w-full" style="background-image: url('images/banner1.png'), linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);
+                    background-blend-mode: overlay;">
+                        <div class="hero-content text-center text-neutral-content text-white">
+                            <div class="max-w-md">
+                                <h1 class="mb-6 text-4xl lg:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-9 font-bold">We supply highly quality organic products</p>
+                                <button class="btn btn-error bg-[#F85559] text-white font-extrabold">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+                <!-- slide-2 -->
                 <div id="slide2" class="carousel-item relative w-full ">
-                    <img src="images/banner1.png" class="w-full" />
+                    <div class="hero" style="background-image: url('images/banner2.png'), linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);
+                    background-blend-mode: overlay;">
+                        <div class="hero-content text-center text-neutral-content text-white">
+                            <div class="max-w-md">
+                                <h1 class="mb-6 text-4xl lg:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-9 font-bold">We supply highly quality organic products</p>
+                                <button class="btn btn-error bg-[#F85559] text-white font-extrabold">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+                <!-- slide-3 -->
                 <div id="slide3" class="carousel-item relative w-full ">
-                    <img src="images/banner1.png" class="w-full" />
+                    <div class="hero" style="background-image: url('images/banner3.png'), linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);
+                    background-blend-mode: overlay;">
+                        <div class="hero-content text-center text-neutral-content text-white">
+                            <div class="max-w-md">
+                                <h1 class="mb-6 text-4xl lg:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-9 font-bold">We supply highly quality organic products</p>
+                                <button class="btn btn-error bg-[#F85559] text-white font-extrabold">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
                 </div>
+                <!-- slide-4 -->
                 <div id="slide4" class="carousel-item relative w-full ">
-                    <img src="images/banner1.png" class="w-full" />
+                    <div class="hero" style="background-image: url('images/banner4.png'), linear-gradient(180deg, #121212 0%, rgba(18, 18, 18, 0.00) 100%);
+                    background-blend-mode: overlay;">
+                        <div class="hero-content text-center text-neutral-content text-white">
+                            <div class="max-w-md">
+                                <h1 class="mb-6 text-4xl lg:text-7xl font-extrabold">Exotic tastes at your doorstep</h1>
+                                <p class="mb-9 font-bold">We supply highly quality organic products</p>
+                                <button class="btn btn-error bg-[#F85559] text-white font-extrabold">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
