--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card bg-white ">
                                         <figure class="px-10 pt-10">
-                                            <img src="images/fruit6.png" alt="Apples" class="rounded-xl w-1/2 lg:w-72" />
+                                            <img src="images/fruit6.png" alt="Apples"
+                                                class="rounded-xl w-1/2 lg:w-72" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-6">
                                             <h2 class="card-title text-4xl font-extrabold">Apples</h2>
@@ -309,7 +310,8 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card bg-white ">
                                         <figure class="px-10 pt-10">
-                                            <img src="images/fruit7.png" alt="Orange" class="rounded-xl w-1/2 lg:w-72" />
+                                            <img src="images/fruit7.png" alt="Orange"
+                                                class="rounded-xl w-1/2 lg:w-72" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-6">
                                             <h2 class="card-title text-4xl font-extrabold">Orange</h2>
@@ -366,7 +368,8 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card bg-white ">
                                         <figure class="px-10 pt-10">
-                                            <img src="images/fruit8.png" alt="RedDragon" class="rounded-xl w-1/2 lg:w-72" />
+                                            <img src="images/fruit8.png" alt="RedDragon"
+                                                class="rounded-xl w-1/2 lg:w-72" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-6">
                                             <h2 class="card-title text-4xl font-extrabold">RedDragon</h2>
@@ -423,7 +426,8 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card bg-white ">
                                         <figure class="px-10 pt-10">
-                                            <img src="images/fruit9.png" alt="Banana" class="rounded-xl w-1/2 lg:w-72" />
+                                            <img src="images/fruit9.png" alt="Banana"
+                                                class="rounded-xl w-1/2 lg:w-72" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-6">
                                             <h2 class="card-title text-4xl font-extrabold">Banana</h2>
@@ -458,6 +462,37 @@
                 </div>
             </div>
 
+        </section>
+
+        <!-- team section -->
+        <section class="mt-14 xl:mt-32">
+            <div class="hero text-white" style="background-image: url('images/team.png');">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="text-center">
+                    <div class="max-w-md">
+                        <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+                        <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece
+                            of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    </div>
+                    <!-- Team Card Container -->
+                    <div class="">
+                        <div>
+                            <div class="card w-96 bg-transparent">
+                                <figure class="px-10 pt-10">
+                                    <img src="images/member1.png" alt="Awlad Hossain" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                    <h2 class="card-title">Awlad Hossain</h2>
+                                    <p>Fruits Expert</p>
+                                    <div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
