--- a/index.html
+++ b/index.html
@@ -465,28 +465,74 @@
         </section>
 
         <!-- team section -->
-        <section class="mt-14 xl:mt-32">
-            <div class="hero text-white" style="background-image: url('images/team.png');">
-                <div class="hero-overlay bg-opacity-60"></div>
-                <div class="text-center">
-                    <div class="max-w-md">
-                        <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+        <section class="mt-14 xl:mt-32 p-4 xl:p-0">
+            <div class="hero text-white" style="background-image: url('images/team.png'), linear-gradient(30deg, #121212, rgba(18, 18, 18, 0.50));
+            background-blend-mode: overlay;">
+                <div class="text-center py-12 lg:py-24">
+                    <div class="max-w-2xl m-auto mb-3 lg:mb-12 mt-6 p-4 md:p-0">
+                        <h1 class="mb-5 text-3xl lg:text-5xl font-bold">Meet the team section</h1>
                         <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece
                             of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
                     <!-- Team Card Container -->
-                    <div class="">
-                        <div>
-                            <div class="card w-96 bg-transparent">
-                                <figure class="px-10 pt-10">
-                                    <img src="images/member1.png" alt="Awlad Hossain" class="rounded-xl" />
-                                </figure>
-                                <div class="card-body items-center text-center">
-                                    <h2 class="card-title">Awlad Hossain</h2>
-                                    <p>Fruits Expert</p>
-                                    <div>
-
-                                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-10 lg:gap-20">
+                        <!-- member-1 -->
+                        <div class="card bg-transparent">
+                            <figure class="px-10 pt-0 lg:pt-10">
+                                <img src="images/member1.png" alt="Awlad Hossain" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center text-white">
+                                <h2 class="card-title text-2xl font-bold mt-0 lg:mt-8 mb-2">Awlad Hossain</h2>
+                                <p class="text-base font-medium mb-4">Fruits Expert</p>
+                                <div class="flex gap-3">
+                                    <i class="fa-brands fa-facebook text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-twitter text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-linkedin-in text-[#F85559] text-2xl "></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- member-2 -->
+                        <div class="card bg-transparent">
+                            <figure class="px-10 pt-0 lg:pt-10">
+                                <img src="images/member2.png" alt="Safia Chowdhury" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center text-white">
+                                <h2 class="card-title text-2xl font-bold mt-0 lg:mt-8 mb-2">Safia Chowdhury</h2>
+                                <p class="text-base font-medium mb-4">Fruits Expert</p>
+                                <div class="flex gap-3">
+                                    <i class="fa-brands fa-facebook text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-twitter text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-linkedin-in text-[#F85559] text-2xl "></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- member-3 -->
+                        <div class="card bg-transparent">
+                            <figure class="px-10 pt-0 lg:pt-10">
+                                <img src="images/member3.png" alt="Rokib Hossain" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center text-white">
+                                <h2 class="card-title text-2xl font-bold mt-0 lg:mt-8 mb-2">Rokib Hossain</h2>
+                                <p class="text-base font-medium mb-4">Fruits Expert</p>
+                                <div class="flex gap-3">
+                                    <i class="fa-brands fa-facebook text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-twitter text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-linkedin-in text-[#F85559] text-2xl "></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- member-4 -->
+                        <div class="card bg-transparent">
+                            <figure class="px-10 pt-0 lg:pt-10">
+                                <img src="images/member4.png" alt="Chaiti" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center text-white">
+                                <h2 class="card-title text-2xl font-bold mt-0 lg:mt-8 mb-2">Chaiti</h2>
+                                <p class="text-base font-medium mb-4">Fruits Expert</p>
+                                <div class="flex gap-3">
+                                    <i class="fa-brands fa-facebook text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-twitter text-[#F85559] text-2xl "></i>
+                                    <i class="fa-brands fa-linkedin-in text-[#F85559] text-2xl "></i>
                                 </div>
                             </div>
                         </div>
