--- a/index.html
+++ b/index.html
@@ -544,8 +544,27 @@
     </main>
 
     <!-- footer -->
-    <footer>
-
+    <footer class="bg-[#121212] py-14 lg:py-36 text-white">
+        <div class="flex justify-center items-center">
+            <img src="images/logo.png" alt="logo">
+            <h2 class="text-4xl font-bold ml-4">Fruit Valley</h2>
+        </div>
+        <div class="grid grid-cols-3 md:flex justify-center items-center text-center mt-12 p-4 xl:p-0 gap-14">
+            <span>Home</span>
+            <span>About Us</span>
+            <span>Shop</span>
+            <span>All Fruits</span>
+            <span>Support</span>
+            <span>My Account</span>
+        </div>
+        <div class="grid grid-cols-3 md:flex justify-center items-center text-center text-4xl mt-12 p-4 xl:p-0 gap-10">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-discord"></i>
+        </div>
     </footer>
 
 </body>
