Added some class

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="navbar-center flex  ml-[6.313rem] md:ml-[28.75rem] lg:ml-0 ">
+                <div class="flex ml-20 md:ml-96 lg:ml-0 ">
                     <img class="w-7 lg:w-auto" src="images/logo.png" alt="logo">
-                    <a class="btn btn-ghost normal-case text-xl md:text-4xl font-bold text-black md:text-white">Fruit
-                        Valley</a>
+                    <h2 class="btn btn-ghost normal-case text-xl md:text-4xl font-bold text-black md:text-white">Fruit
+                        Valley</h2>
                 </div>
                 <div class="navbar-end">
                     <div class="form-control hidden lg:flex">
@@ -540,6 +540,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Why us section -->
 
     </main>
 
